* Changelog
** Unreleased 9.0.1
  * Add support for [[https://github.com/PlasmaFAIR/fortitude][Fortitude]] (Fortran)
  * Clear diagnostics after workspace edits to prevent stale diagnostics at wrong line numbers after operations like ~lsp-organize-imports~ (see [[https://github.com/emacs-lsp/lsp-mode/issues/3888][#3888]])
  * Add support for ~workspace/willRenameFiles~ and ~workspace/didRenameFiles~ when using ~vc-git-rename-file~.
  * Fix documentation to show unevaluated expressions for file/directory defcustom defaults instead of machine-specific paths (see [[https://github.com/emacs-lsp/lsp-mode/issues/4924][#4924]])
  * Fix invalid regex patterns in ~lsp-file-watch-ignored-directories~ causing crashes (see [[https://github.com/emacs-lsp/lsp-mode/issues/3439][#3439]])
  * Fix documentation website sidebar visibility on tablet landscape screens (see [[https://github.com/emacs-lsp/lsp-mode/issues/4946][#4946]])
  * Add ~lsp-fix-all~ command and ~lsp-fix-all-on-save~ option for ~source.fixAll~ code action support (see [[https://github.com/emacs-lsp/lsp-mode/issues/1842][#1842]])
  * Add notification handlers for Deno language server (~deno/didRefreshDenoConfigurationTree~, ~deno/didChangeDenoConfiguration~, ~deno/didUpgradeCheck~).
  * Fix "Unknown notification: semgrep/rulesRefreshed" warning in lsp-semgrep client.
  * Add ~lsp-install-server~ support for Deno LSP via npm.
  * Add diagnostic and formatter custom settings for [[https://github.com/rcjsuen/dockerfile-language-server-nodejs][Dockerfile language server]].
  * Fix "Eager macro-expansion failure" errors with lsp-interface pcase patterns (see #4723)
  * Add support for [[https://github.com/Myriad-Dreamin/tinymist][Typst (Tinymist)]] language server.
  * Add support for ~just~ files through just-lsp.
  * Add support for RON files through ron-lsp.
  * Add explicit flag to enable (or disable) JSON validation.
  * Fix Accommodate renaming of lsp-postgres binaries
  * Fix =lsp-org= for org >= 9.7 (see #4300)