@@ -8519,15 +8519,15 @@ nil."
 ;; https://docs.npmjs.com/files/folders#executables
 (cl-defun lsp--npm-dependency-path (&key package path &allow-other-keys)
   "Return npm dependency PATH for PACKAGE."
-  (let ((path (executable-find
-               (f-join lsp-server-install-dir "npm" package
-                       (cond ((eq system-type 'windows-nt) "")
-                             (t "bin"))
-                       path)
-               t)))
-    (unless (and path (f-exists? path))
+  (let ((path* (executable-find
+                (f-join lsp-server-install-dir "npm" package
+                        (cond ((eq system-type 'windows-nt) "")
+                              (t "bin"))
+                        path)
+                t)))
+    (unless path*
       (error "The package %s is not installed.  Unable to find %s" package path))
-    path))
+    path*))
 
 (cl-defun lsp--npm-dependency-install (callback error-callback &key package version &allow-other-keys)
   (if-let* ((npm-binary (executable-find "npm")))
